--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <meta name="author" content="Meh">
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
-
   </head>
 
   <body>
-
-    
     <div id="helpText">
       <p>
         This is a basic tool which can import a text file with data and break it down into a 
@@ -34,6 +31,18 @@
       </p>
 
       <p>The configuration box on the right can be used to specify columns and path/attribute separator. </p>
+
+      <h4>Step-by-step usage</h4>
+      <p>
+        <ol>
+          <li>Open the entity-attribute matrix from Sharepoint. </li>
+          <li>Ensure that no filters are enabled.</li>
+          <li>Click on any cell in the matrix containing data. </li>
+          <li>Hit ctrl-a to select the entire list, and then ctrl-c to copy it.</li>
+          <li>Open notepad or any other text editor, and paste in the matrix as text.</li>
+          <li>Save the file, and then use the open button on the right to open it in the viewer.</li>
+        </ol>
+      </p>
     </div>
     <div id="config">
       
@@ -48,6 +57,8 @@
       <form id="configColumns">
         <span><span><label for="srcName">Source key name</label> <input id="srcName" type="number" minlength="1" required pattern=".{1,}" class="cfgInMin" value="1" /></span>
         <span><label for="srcSrc">Source name</label> <input id="srcSrc" type="number" class="cfgInMin" minlength="1" required pattern=".{1,}" value="4" /></span>
+        <span><label for="enableContext">Enable context</label> <input id="enableContext" type="checkbox" checked="checked" /></span>
+        <span><label for="context">Context</label> <input id="context" type="number" class="cfgInMin" minlength="1" required pattern=".{1,}" value="6" /></span>
         <span><label for="strPath">Entity path</label> <input id="strPath" type="number" class="cfgInMin" minlength="1" required pattern=".{1,}" value="8" /></span>
         <span><label for="strAlias">Alias field</label> <input id="strAlias" type="number" class="cfgInMin" minlength="1" required pattern=".{1,}" value="9" /></span>
         <span><label for="separator">Separator char</label> <input id="separator" type="text" minlength="1" maxlength="1" required pattern=".{1,}" class="cfgInMin" value="." /></span>
