Fixed rendering so that data is loaded and kept in raw form. Toggling eg. the context switch processes the raw information and renders it rather than having to load the file again

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <span id="help">?</span>
       </div>
       <div class="ctr">
-        <button id="fileButton" onclick="openFile(dispFile)">Open a file</button>
+        <button id="fileButton" onclick="openFile(grabRawData)">Open a file</button>
       </div>
 
       <h4>Configure columns</h4>
