Now displays the date for the most recent commit

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <span><label for="strAlias">Alias field</label> <input id="strAlias" type="number" class="cfgInMin" minlength="1" required pattern=".{1,}" value="9" /></span>
         <span><label for="separator">Separator char</label> <input id="separator" type="text" minlength="1" maxlength="1" required pattern=".{1,}" class="cfgInMin" value="." /></span>
     </form>
+
+      <div id="lastMod"></div>
     </div>
 
     <div id="tree"></div>
